valid mapstruct, allow cors