@@ -11,6 +11,7 @@ import org.mapstruct.factory.Mappers;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Mapper
@@ -27,29 +28,37 @@ public interface BookMapper {
     //- Convert List<Book> -> List<BookDTO>:
     //! Dùng khi RESPONSE
     default List<BookDTO> toListDTO(List<Book> books) {
-        return books != null ? books.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList()) : Collections.emptyList();
+        return books != null ? books.stream().map(this::toDTO).collect(Collectors.toList()) : Collections.emptyList();
     }
 
     //- Convert List<ID> -> List<Book>:
     //! Dùng khi REQUEST
     default List<Book> toListEntity(List<?> bookIds, BookRepository bookRepository) {
+        // Check if the input list is null or empty
+        if (bookIds == null || bookIds.isEmpty()) {
+            return Collections.emptyList(); // Return an empty list if the input is null or empty
+        }
 
         return bookIds.stream()
+                .filter(Objects::nonNull) // Filter out any null IDs to avoid NullPointerException
                 .map(bookId -> bookRepository.findById((String) bookId)
                         .orElseThrow(() -> new RuntimeException(Response.notFound("Book", (String) bookId))))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
     //! Custom
     default List<CartBookDTO> toCartBookDTOList(List<Book> books) {
+        // Check if the books list is null or empty
+        if (books == null || books.isEmpty()) {
+            return Collections.emptyList(); // Return an empty list if the input is null or empty
+        }
+
         return books.stream()
+                .filter(Objects::nonNull) // Filter out any null Book objects
                 .map(book -> {
                     CartBookDTO cartBookDTO = toCartBookDTO(book);
                     cartBookDTO.setBook(toDTO(book));
-
                     return cartBookDTO;
                 })
                 .collect(Collectors.toList());
